--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -5,9 +5,9 @@
         <h3>Welcome</h3>
       </div>
     </div>
-    <form class="login-form" #form="ngForm" (ngSubmit)="onlogin()">
+    <form class="login-form" #form="ngForm" (ngSubmit)="onSend()">
       <label >Email</label>
-      <input type="email" placeholder="Email" name="email" #email="ngModel" [(ngModel)]="userData.email" pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"/>
+      <input type="email" placeholder="Email" name="email" [(ngModel)]="newUser.email" type="email"/>
       <button type="submit" routerLink="verifyotp">Send OTP</button>
     </form>
   </div>
