--- a/FrontEnd/src/app/login/login.component.html
+++ b/FrontEnd/src/app/login/login.component.html
@@ -5,10 +5,10 @@
         <h3>Welcome</h3>
       </div>
     </div>
-    <form class="login-form" #form="ngForm" (ngSubmit)="onSend()">
+    <form class="login-form" (ngSubmit)="onSend()">
       <label >Email</label>
-      <input type="email" placeholder="Email" name="email" [(ngModel)]="newUser.email" type="email"/>
-      <button type="submit" routerLink="verifyotp">Send OTP</button>
+      <input type="email" placeholder="Email" name="email" [(ngModel)]="newUser.email" />
+      <button type="submit" >Send OTP</button>
     </form>
   </div>
 </div> 
