--- a/FrontEnd/src/app/welcome/welcome.component.html
+++ b/FrontEnd/src/app/welcome/welcome.component.html
@@ -2,9 +2,10 @@
     
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" routerLink="">Logout</button>
     </div>
-    <div>
-        <h1>WELCOME</h1>
-    </div>
-  </nav>
+  </nav> 
+  <div style="margin: 150px;">
+    <br>
+    <h1>WELCOME, The OTP verification is successfull!!!</h1>
+</div>
